--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </header>
     <main>
         <h1>Welcome to the Main Menu</h1>
-        <p>Select an option from the menu to open the corresponding page.</p>
+        <p>Select an option to open the corresponding sample.</p>
     </main>
 </body>
 </html>
