--- a/index.html
+++ b/index.html
@@ -74,7 +74,49 @@
 <body>
     <header>
         <nav>
-            <ul class="menu"><li class="category">Pt<ul><li class="subcategory">Time Series:<ul><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_pristine_Pt.html" target="_blank">Pristine</a></li><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_100h_Pt.html" target="_blank">100h</a></li><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_500h_Pt.html" target="_blank">500h</a></li><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_1500h_Pt.html" target="_blank">1500h</a></li></ul></li><li class="subcategory">Contaminated samples:<ul><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Fe_Pt.html" target="_blank">Fe2+</a></li><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Ca_Pt.html" target="_blank">Ca2+</a></li></ul></li></ul></li><hr><li class="category">Ir<ul><li class="subcategory">Time Series:<ul><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_pristine_Ir.html" target="_blank">Pristine</a></li><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_100h_Ir.html" target="_blank">100h</a></li><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_500h_Ir.html" target="_blank">500h</a></li><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_1500h_Ir.html" target="_blank">1500h</a></li></ul></li><li class="subcategory">Contaminated samples:<ul><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Fe_Ir.html" target="_blank">Fe2+</a></li><li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Ca_Ir.html" target="_blank">Ca2+</a></li></ul></li></ul></li><hr></ul>
+            <ul class="menu">
+                <li class="category">Pt
+                    <ul>
+                        <li class="subcategory">Time Series:
+                            <ul>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_pristine_Pt.html" target="_blank">Pristine</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_100h_Pt.html" target="_blank">100h</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_500h_Pt.html" target="_blank">500h</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_1500h_Pt.html" target="_blank">1500h</a></li>
+                            </ul>
+                        </li>
+                        <li class="subcategory">Contaminated samples:
+                            <ul>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Fe_Pt.html" target="_blank">Fe2+</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Ca_Pt.html" target="_blank">Ca2+</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <hr>
+                <li class="category">Ir
+                    <ul>
+                        <li class="subcategory">Time Series:
+                            <ul>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_pristine_Ir.html" target="_blank">Pristine</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_100h_Ir.html" target="_blank">100h</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_500h_Ir.html" target="_blank">500h</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_1500h_Ir.html" target="_blank">1500h</a></li>
+                            </ul>
+                        </li>
+                        <li class="subcategory">Contaminated samples:
+                            <ul>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Fe_Ir.html" target="_blank">Fe2+</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Ca_Ir.html" target="_blank">Ca2+</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <hr>
+                <!-- New Article link added here -->
+                <li class="item"><a href="https://onlinelibrary.wiley.com/doi/10.1002/aesr.202400048" target="_blank">Article</a></li>
+                <hr>
+            </ul>
         </nav>
     </header>
     <main>
