--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </header>
     <main>
         <h1>Welcome to the Main Menu</h1>
-        <p>Select an option to open the corresponding sample. By the end of the menu, more can information is available with our paper for Advanced Energy and Sustainability Research.</p>
+        <p>Select an option to open the corresponding sample. By the end of the menu, more information is also available with our paper for Advanced Energy and Sustainability Research.</p>
     </main>
 </body>
 </html>
