--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
                     </ul>
                 </li>
                 <hr>
+                <li class="category">Potential  <!-- Potential category -->
+                    <ul>
+                        <li class="subcategory">Measurements:
+                            <ul>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_surface_plot_2.2v_Ir.html" target="_blank">2.2V Ir</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_surface_plot_2.2v_Pt.html" target="_blank">2.2V Pt</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <hr>
                 <!-- New Article link added here -->
                 <li class="item"><a href="https://onlinelibrary.wiley.com/doi/10.1002/aesr.202400048" target="_blank">Article</a></li>
                 <hr>
