--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                                 <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Ca_Pt.html" target="_blank">Ca2+</a></li>
                             </ul>
                         </li>
+                        <li class="subcategory">Potential:
+                            <ul>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_surface_plot_2.2v_Pt.html" target="_blank">2.2V</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <hr>
@@ -110,15 +115,9 @@
                                 <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_Ca_Ir.html" target="_blank">Ca2+</a></li>
                             </ul>
                         </li>
-                    </ul>
-                </li>
-                <hr>
-                <li class="category">Potential  <!-- Potential category -->
-                    <ul>
-                        <li class="subcategory">Measurements:
+                        <li class="subcategory">Potential:
                             <ul>
-                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_surface_plot_2.2v_Ir.html" target="_blank">2.2V Ir</a></li>
-                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_surface_plot_2.2v_Pt.html" target="_blank">2.2V Pt</a></li>
+                                <li class="item"><a href="https://Leonardolac97.github.io/XRF-3D-Maps/surface_plot_surface_plot_2.2v_Ir.html" target="_blank">2.2V</a></li>
                             </ul>
                         </li>
                     </ul>
